--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require" : {
         "php": ">=5.3.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
-        "doctrine/orm": ">=2.2.*"
+        "doctrine/orm": ">=2.2.0"
     },
     "autoload" : {
         "psr-0" : {
